2004-09-07  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_commit_transaction): if committing a transaction fails, we
	want to make sure that the database is not in an inconsistent state.
	To be sure of this, a rollback is performed. 
	(db_rollback_transaction): if a rollback fails, disconnect from the
	database server, then reconnect again.

	* imaputil.c (date_sql2imap): changed from array magic function to
	function using strptime() and strftime() for data parsing and
	formatting. Now adds timezone to IMAP Internal Date.
	(date_imap2sql): removed array magic and now uses strptime and
	strftime for date parsing and formatting.

2004-09-06  Ilja Booij  <ilja@ic-s.nl>

	* imapcommands.c (_ic_list): change in regex to fix "%" operator. It
	does not match "/" now.

2004-09-03  Ilja Booij  <ilja@ic-s.nl>

	* sql/, all database creation and migration scripts: added 'anyone'
	in dbmail_users table for ACL handling.

2004-09-01  Aaron Stone  <aaron@serendipity.cx>

	* user.c: changed cleartext -> plaintext in the syntax help.
	* man/user.1: changed cleartext -> plaintext in the syntax help.
	* auth/authsql.c: changed cleartext -> plaintext in a debug trace.

2004-08-31  Ilja Booij  <ilja@ic-s.nl>
	
	* user.c (main): fixed missing handling of -u command line
	switch.

2004-08-29  Aaron Stone  <aaron@serendipity.cx>

	* dsn.c, dsn.h: added dsnuser_resolve to resolve just a single
	deliver_to_user_t struct.
	* dsn.c (dsnuser_resolve_list): this is a list wrapper around
	the single-user resolver.
	* lmtp.c: now replies after each RCPT TO command. fixed two
	memory leaks within the 'rcpt' list of dsnuser's.

2004-08-25  Ilja Booij  <ilja@ic-s.nl>

	* user.c (main): if the command fails, return message to 
	command line.
	(do_add): returns -1 directly if user already exists.

2004-08-24  Ilja Booij  <ilja@ic-s.nl>

	* user.c (do_add): now adds aliases if needed.

	* acl.c (acl_has_right): adapted function to also check for rights